gsuiPanels: CSS, fix, remove z-index: 999;

--- a/gsuiPanels/gsuiPanels.css
+++ b/gsuiPanels/gsuiPanels.css
@@ -17,7 +17,6 @@
 /* .gsuiPanels-extend ------------------------------------------------------- */
 .gsuiPanels-extend {
 	position: absolute;
-	z-index: 999;
 	top: -2px;
 	left: 0;
 	width: 100%;
